@@ -1183,18 +1183,24 @@ legend {
 	text-align: left;
 }
 
+.formColumnOptional {
+	float: left;
+	display: table-column;
+	width: 5%;
+}
+
 .formColumnLeft {
 	float: left;
 	display: table-column;
 	padding-left: 4px;
-	width: 40%;
+	width: 45%;
 	text-align: left;
 }
 
 .formColumnRight {
 	float: left;
 	display: table-column;
-	width: 58%;
+	width: 45%;
 	text-align: left;
 }
 
@@ -1292,7 +1298,7 @@ legend {
 	.formColumnLeft {
 		float: left;
 		display: table-row;
-		width: 100%;
+		width: 90%;
 		text-align: left;
 	}
 
