@@ -1260,10 +1260,16 @@ table.cactiTable {
 	display: table-column;
 }
 
+.formColumnOptional {
+	float: left;
+	display: table-column;
+	width: 5%;
+}
+
 .formColumnLeft {
 	float: left;
 	display: table-column;
-	width: 50%;
+	width: 45%;
 	text-align: left;
 	color: #000;
 }
@@ -1271,7 +1277,7 @@ table.cactiTable {
 .formColumnRight {
 	float: left;
 	display: table-column;
-	width: 50%;
+	width: 45%;
 	text-align: left;
 	color: #000;
 }
@@ -1343,7 +1349,7 @@ table.cactiTable {
 	.formColumnLeft {
 		float: left;
 		display: table-row;
-		width: 100%;
+		width: 90%;
 	}
 
 	.formColumnRight {
